Refactor index.html and fix resume link
Updated the HTML structure and fixed the resume link path.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="#skills" onclick="closeMenu()">Skills</a></li>
         <li><a href="#projects" onclick="closeMenu()">Projects</a></li>
         <li><a href="#contact" onclick="closeMenu()">Contact</a></li>
-        <li><a href="assets\Resume.docx" target="_blank" class="btn"><i class="fas fa-file-alt"></i> Resume</a></li>
+        <li><a href="c:\Users\ACER\Downloads\Resume..pdf" target="_blank" class="btn"><i class="fas fa-file-alt"></i> Resume</a></li>
       </ul>
       <div class="menu-btn" id="menu-btn">
         <i class="fas fa-bars"></i>
@@ -141,3 +141,4 @@
   </script>
 </body>
 </html>
+
